--- a/devops.html
+++ b/devops.html
@@ -54,7 +54,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oQVLafwq&__jvst=Employee+Referral&__jvsd=soBeegwc&__jvsc=Twitter&bid=nINhqMwt'>Jobvite, Inc. Careers - Senior DevOps Tooling Engineer (remote)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oQVLafwq&__jvst=Employee+Referral&__jvsd=soBeegwc&__jvsc=Twitter&bid=nINhqMwt'>Jobvite, Inc. Careers - Senior DevOps Tooling Engineer (remote)</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -108,7 +108,7 @@
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.militaryhire.com/jobs-for-veterans/job/2053044/Systems-Engineer-DevOps-Level-III/state/Maryland/city/Annapolis-Junction/'>Systems Engineer, DevOps, Level III in Annapolis Junction, Maryland Jobs for Veterans | Military Hire</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.militaryhire.com/jobs-for-veterans/job/2053044/Systems-Engineer-DevOps-Level-III/state/Maryland/city/Annapolis-Junction/'>Systems Engineer, DevOps, Level III in Annapolis Junction, Maryland Jobs for Veterans | Military Hire</a></h5> 
 <p><span class="badge badge-light">Annapolis Junction, Maryland</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -116,7 +116,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://amswh.avature.net/careers/JobDetail/Devops-Engineer/17390'>Devops Engineer - External Careers</a></h5> 
+<h5><a href='https://amswh.avature.net/careers/JobDetail/Devops-Engineer/17390'>Devops Engineer - External Careers</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -136,7 +136,7 @@
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/klarna/0d8e6a52-cbc5-4be8-9ee7-c8debcf97eee'>Klarna - Engineering Manager - DevOps & Automation</a></h5> 
+<h5><a href='https://jobs.lever.co/klarna/0d8e6a52-cbc5-4be8-9ee7-c8debcf97eee'>Klarna - Engineering Manager - DevOps & Automation</a></h5> 
 <p><span class="badge badge-light">Stockholm, Sweden</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -202,11 +202,11 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/labelbox/e86d9dfe-2e63-459c-93a2-f92412441d60'>Labelbox - DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/labelbox/e86d9dfe-2e63-459c-93a2-f92412441d60'>Labelbox - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://netimpactstrategies.applytojob.com/apply/RI8DOAd2oT/DevOps-Engineer'>DevOps Engineer - NetImpact Strategies - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://netimpactstrategies.applytojob.com/apply/RI8DOAd2oT/DevOps-Engineer'>DevOps Engineer - NetImpact Strategies - Career Page</a></h5> 
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -238,7 +238,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/site-reliability-engineer--devops-engineer-1808333/?gh_src=82a8057f1'>Site Reliability Engineer/ DevOps Engineer | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/site-reliability-engineer--devops-engineer-1808333/?gh_src=82a8057f1'>Site Reliability Engineer/ DevOps Engineer | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -258,7 +258,7 @@
 <p><span class="badge badge-light">Ottawa, ON, Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/datatrontechnologies/jobs/4497193002'>Job Application for DevOps and Systems Engineer at Datatron Technologies</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/datatrontechnologies/jobs/4497193002'>Job Application for DevOps and Systems Engineer at Datatron Technologies</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -358,7 +358,7 @@ internal IT operations. You will be completing tasks in support of our IT functi
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Version1/743999698462881-cloud-devops-engineer-aws-devops-engineer'>Version 1 Cloud DevOps Engineer / AWS DevOps Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Version1/743999698462881-cloud-devops-engineer-aws-devops-engineer'>Version 1 Cloud DevOps Engineer / AWS DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -373,7 +373,7 @@ internal IT operations. You will be completing tasks in support of our IT functi
 <p>Oct 15, 2019 ... The Continuous Integration/Continuous Delivery DevOps Engineer will join an 
 agile service team focused on daily production service delivery and application?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oQVLafwq&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=nsZdoMwj'>Jobvite, Inc. Careers - Senior DevOps Tooling Engineer (remote)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oQVLafwq&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=nsZdoMwj'>Jobvite, Inc. Careers - Senior DevOps Tooling Engineer (remote)</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -459,7 +459,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">Cologne Cologne</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/quadient/job/oj4rbfwJ'>Quadient Careers - Ing?nieur Syst?me DevOps</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/quadient/job/oj4rbfwJ'>Quadient Careers - Ing?nieur Syst?me DevOps</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
